--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.12",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.18"
   }
 }
