--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.12",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
