Update control view style

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,6 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "start:dev": "sirv public --single --dev -H 0.0.0.0"
   }
 }
