Implement basic backend with gorm and fiber

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
-SECRET=cat
+POSTGRES_HOST: 127.0.0.1
+POSTGRES_PORT: 5432
+POSTGRES_DB:   cosmicsail
+POSTGRES_USER: cosmicsail
+POSTGRES_PSWD: p8ssw0rd
 
-MONGODB_USER=meow
-MONGODB_PASSWORD=s3c0r3
-
-MONGODB_NAME=meow
-MONGODB_URL=meow.s3c0r3.online
+SERVER_PORT: 3000
