Start rework of boat software

--- a/boat/.env.example
+++ b/boat/.env.example
@@ -1,5 +1,5 @@
-SERVER=server.local:3000
+BACKEND=http://server.local:3000
+SOCKET=http://socket.local:3030
 TOKEN=eyq642374
 BOATID=JiW78IB
 UBLOX_TOKEN=-asiu2
-PORT=/dev/ttyAMA0
