Finish motor setup function with test on connect

--- a/boat/.env.example
+++ b/boat/.env.example
@@ -1,5 +1,5 @@
 BACKEND=http://server.local:3000
 SOCKET=http://socket.local:3030
 TOKEN=eyq642374
-BOATID=JiW78IB
+BOAT_EMBLEM=JiW78IB
 UBLOX_TOKEN=-asiu2
