--- a/.github/workflows/waterway.yml
+++ b/.github/workflows/waterway.yml
@@ -27,14 +27,17 @@ jobs:
       with:
         key: 'APIURL'
         value: 'https://rudder.cosmicsail.online'
+        envPath: 'frontend/.env'
     - uses: TickX/var-to-dotenv@v1.1.1
       with:
         key: 'SOCKETURL'
         value: 'https://live.rudder.cosmicsail.online'
+        envPath: 'frontend/.env'
     - uses: TickX/var-to-dotenv@v1.1.1
       with:
         key: 'MAPBOX_TOKEN'
         value: ${{ secrets.MAPBOX_TOKEN }}
+        envPath: 'frontend/.env'
     
     - name: Build and push Docker images
       # You may pin to the exact commit or the version.
