--- a/.github/workflows/waterway.yml
+++ b/.github/workflows/waterway.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./frontend
+        working-directory: frontend
 
     steps:
     - name: Getting short version sha
