--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
+    "svelte": "^3.31.0",
     "svelte-preprocess": "^3.2.0-alpha.2",
     "tailwindcss": "^1.4.6",
     "tailwindcss-dark-mode": "^1.1.3"
@@ -24,6 +24,7 @@
     "moment": "^2.29.0",
     "sirv-cli": "^0.4.4",
     "socket.io-client": "^2.3.0",
+    "svelte-frappe-charts": "^1.3.1",
     "svelte-gamepad": "^0.1.1",
     "svelte-routing": "^1.4.2"
   },
