--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@rollup/plugin-replace": "^2.3.3",
-    "postcss": "^7.0.21",
-    "postcss-load-config": "^2.1.0",
-    "rollup": "^1.12.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.31.0",
-    "svelte-preprocess": "^3.2.0-alpha.2",
-    "tailwindcss": "^1.4.6",
-    "tailwindcss-dark-mode": "^1.1.3"
-  },
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^0.19.2",
-    "dotenv": "^8.2.0",
-    "gyronorm": "^2.0.6",
-    "moment": "^2.29.0",
-    "sirv-cli": "^0.4.4",
-    "socket.io-client": "^2.3.0",
-    "svelte-frappe-charts": "^1.3.1",
-    "svelte-gamepad": "^0.1.1",
-    "svelte-routing": "^1.4.2"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev -H 0.0.0.0"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
