Add compass display for autopilot

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "mapbox-gl": "^2.0.1",
     "postcss": "^7",
     "react": "^17.0.1",
+    "react-compass": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-style-normalizer": "^1.2.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^0.2.4"
   },
