--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@
 
 # Android studio 3.1+ serialized cache file
 */.idea/caches/build_file_checksums.ser
+frontend/.idea/discord.xml
+frontend/.eslintcache
