--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
     "axios": "^0.21.1",
-    "mapbox-gl": "^2.0.1",
+    "mapbox-gl": "^2.1.0",
     "postcss": "^7",
     "react": "^17.0.1",
     "react-compass": "^0.1.0",
@@ -23,7 +23,8 @@
     "react-style-normalizer": "^1.2.8",
     "socket.io-client": "^2.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "worker-loader": "^3.0.7"
   },
   "scripts": {
     "start": "craco start",
