--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_APIURL=https://rudder.cosmicsail.online
+REACT_APP_SOCKET=https://live.rudder.cosmicsail.online
 REACT_APP_MAPBOX_TOKEN="pk.ey..."
